<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstagramViewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_photos">PhotosActivity</string>
    <string name="popular_photos_caption">Popular Photos</string>
    <string name="text_liked_by">Liked By:</string>
    <string name="blank_liked_by"></string>
    <string name="blank_user"></string>
    <string name="label_user">User:</string>
    <string name="label_blank_caption"></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hint_test">test test</string>

</resources>
