<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ivPhoto"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_blank_caption"
        android:id="@+id/tvTitle"
        android:layout_below="@+id/ivPhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_liked_by"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/labelLikedBy"
        android:layout_below="@+id/tvTitle"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/blank_liked_by"
        android:id="@+id/tvLikedByCount"
        android:layout_below="@+id/labelLikedBy"
        android:layout_alignLeft="@+id/labelLikedBy"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_user"
        android:id="@+id/labelUser"
        android:layout_below="@+id/tvTitle"
        android:layout_alignRight="@+id/tvUser"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/blank_user"
        android:id="@+id/tvUser"
        android:layout_below="@+id/labelUser"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>