<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ivPhoto"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_purple"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/testimg1" 
        android:onClick="onImageClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_liked_by"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/labelLikedBy"
        android:layout_alignParentRight="false"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ivPhoto"
        android:hint="@string/hint_test"
        android:background="#14fffaf0" />
    
    <!--android:layout_below="@+id/ivPhoto"-->
    <!--android:layout_alignBottom="@+id/ivPhoto"-->
    <!--android:layout_alignParentEnd="true"-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/blank_liked_by"
        android:id="@+id/tvLikedByCount"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/labelLikedBy"
        android:hint="@string/hint_test" />
    <!--android:layout_alignLeft="@+id/labelLikedBy"-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_user"
        android:id="@+id/labelUser"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ivPhoto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/blank_user"
        android:id="@+id/tvUser"
        android:layout_below="@+id/labelUser"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/tvTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#259c7aff" />

</RelativeLayout>